[IMP] renamed the m2m 'fields' to 'field_ids' so as to not bump heads with odoo.fields; added a testing 'log data' button to the custom mapping form to test the ability to access field data of all records of a given model; and added an onchange clear_fields method so that when a user changes the model, field_ids emptys since the old fields will not apply to the new model

--- a/custom_edi/views/custom_mapping.xml
+++ b/custom_edi/views/custom_mapping.xml
@@ -27,7 +27,7 @@
                         </group>
 
                         <group>
-                            <field name="fields" widget="many2many" string="Fields to Export">
+                            <field name="field_ids" widget="many2many" string="Fields to Export">
                                 <tree>
                                     <field name="field_description"/> <!-- human readable name -->
                                     <field name="name"/> <!-- technical name -->
@@ -36,6 +36,8 @@
                             </field>
                         </group>
                     </sheet>
+
+                    <button name="log_field_data" type="object" string="Log Data"/>
                 </form>
             </field>
         </record>
