[ADD] Integrated my work with the subfield-traversal with Dhruv's work on the EDI tag model, just don't know how to send which subfield is selected to the EDI tag model

--- a/custom_edi/views/custom_mapping.xml
+++ b/custom_edi/views/custom_mapping.xml
@@ -29,12 +29,13 @@
                             <field name="edi_tag" widget="one2many" string="Fields to Export">
                                 <tree>
                                     <field name="field_id"/>
-                                    <field name="sub"/>
+                                    <!--<field name="sub"/>-->
                                     <field name="xml_tag"/>
-                                    <field name="model" invisible="1"/>
+                                    <field name="model"/>
                                     <field name="ttype"/>
                                     <field name="relation"/>
                                 </tree>
+                                <!--
                                 <form string="Add fields">
                                         <sheet>
                                             <group>
@@ -48,6 +49,7 @@
                                             </group>
                                         </sheet>
                                 </form>
+                                -->
                             </field>
                         </group>
                     </sheet>
