--- a/custom_edi/views/fields_inherit.xml
+++ b/custom_edi/views/fields_inherit.xml
@@ -2,26 +2,31 @@
 
 <odoo>
     <data>
-
+        
         <record model="ir.ui.view" id="view_model_field_form_inherit">
             <field name="name">ir.model.fields.form.inherit</field>
             <field name="model">ir.model.fields</field>
             <field name="inherit_id" ref="base.view_model_fields_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='copied']" position="after">
-                    <field name="field_tree"/>
-                    <field name="xml_tag"/>
+                    <!--<field name="field_tree"/>-->
+                    <!--<field name="xml_tag"/>-->
+                    <field name="name"/>
                 </xpath>
             </field>
         </record>
         
+        
         <!-- When you click "add line" on the main custom mapping page in the fields field
         http://localhost:8069/web#id=45&menu_id=4&cids=1&action=30&model=ir.ui.view&view_type=form -->
+
+        <!-- 	base.view_model_fields_search -->
 
         <record model="ir.ui.view" id="view_model_fields_tree_inherit">
             <field name="name">ir.model.fields.tree.inherit</field>
             <field name="model">ir.model.fields</field>
             <field name="inherit_id" ref="base.view_model_fields_tree"/>
+            <!--<field name="inherit_id" ref="base.view_model_fields_search"/>-->
             <field name="arch" type="xml">
 
                 <xpath expr="//field[@name='name']" position="before">
