--- a/custom_edi/views/custom_mapping.xml
+++ b/custom_edi/views/custom_mapping.xml
@@ -24,6 +24,8 @@
                         <h1><field name="name"/></h1>
                         <group>
                             <field name="model"/>
+                            <field name="root_tag"/>
+                            <field name="record_tag"/>
                             <!--<span class="o_many2one_field"/>-->
                         </group>
                         <group>
