[IMP] fixed problem where fields were not being retrieved if there was only a field tree entered and no field_id. Cleaned up code/removed unused code/better comments

--- a/custom_edi/views/edi_tag_views.xml
+++ b/custom_edi/views/edi_tag_views.xml
@@ -20,7 +20,7 @@
                                     <field name="xml_tag"/>
                                 </tree>
                             </field>
-                            <field name="parent_tag_id"/>
+                            <field name="parent_tag_id" readonly="1"/>
                         </group>
                     </sheet>
                 </form>
