--- a/custom_edi/views/edi_tag_views.xml
+++ b/custom_edi/views/edi_tag_views.xml
@@ -12,9 +12,10 @@
                         <group>
                             <field name="model" invisible="1"/>
                             <field name="xml_tag"/>
-                            <field name="field_id"/>
-                            <!--<field name="field_id2"/>-->
-                            <field name="field_tree"/>
+                            <field name="is_static"/>
+                            <field name="static_content" attrs="{'invisible':[('is_static', '=', False)]}"/>
+                            <field name="field_id" attrs="{'invisible':[('is_static', '=', True)]}"/>
+                            <field name="field_tree" attrs="{'invisible':[('is_static', '=', True)]}"/>
                             <field name="child_tag_ids">
                                 <tree>
                                     <field name="xml_tag"/>
