[ADD] Ability for user to select whether they want all the record of the selected model to be exported to the same xml document or if they want each record to get its own xml document

--- a/custom_edi/views/custom_mapping.xml
+++ b/custom_edi/views/custom_mapping.xml
@@ -26,6 +26,7 @@
                             <field name="model"/>
                             <field name="root_tag"/>
                             <field name="record_tag"/>
+                            <field name="record_document_mode"/>
                             <!--<span class="o_many2one_field"/>-->
                         </group>
                         <group>
