[ADD] Typing in a field tree triggers a traversal of the field tree to check if it exists and to retrieve its ir.models.fields record in order to get data about it

--- a/custom_edi/views/edi_tag_views.xml
+++ b/custom_edi/views/edi_tag_views.xml
@@ -14,8 +14,9 @@
                             <field name="xml_tag"/>
                             <field name="is_static"/>
                             <field name="static_content" attrs="{'invisible':[('is_static', '=', False)]}"/>
-                            <field name="field_id" attrs="{'invisible':[('is_static', '=', True)]}"/>
+                            <field name="field_id" attrs="{'invisible':[('is_static', '=', True)], 'readonly':[('field_tree','!=',False)]}"/>
                             <field name="field_tree" attrs="{'invisible':[('is_static', '=', True)]}"/>
+                            <field name="custom_mapping"/>
                             <field name="child_tag_ids">
                                 <tree>
                                     <field name="xml_tag"/>
