--- a/custom_edi/views/edi_tag_views.xml
+++ b/custom_edi/views/edi_tag_views.xml
@@ -13,17 +13,34 @@
                             <field name="model" invisible="1"/>
                             <field name="xml_tag"/>
                             <field name="is_static"/>
-                            <field name="static_content" attrs="{'invisible':[('is_static', '=', False)]}"/>
+
                             <field name="field_id" attrs="{'invisible':[('is_static', '=', True)], 'readonly':[('field_tree','!=',False)]}"/>
                             <field name="field_tree" attrs="{'invisible':[('is_static', '=', True)]}"/>
-                            <field name="custom_mapping"/>
+                            <field name="ttype" readonly="1" attrs="{'invisible':[('is_static','=','True')]}"/>
+
+                            <field name="x2many_record_tag" attrs="{'invisible':[('ttype','!=','many2many'), ('ttype','!=','one2many')]}"/>
+                            <field name="relation" attr="{'invisible':[('ttype','!=','many2many'), ('ttype','!=','one2many')]}"/>
+                            
+                            <field name="static_content" attrs="{'invisible':[('is_static', '=', False)]}"/>
+                            
+                            <field name="x2many_subtag_ids" attrs="{'invisible':[('ttype','!=','many2many'), ('ttype','!=','one2many')]}">
+                                <tree>
+                                    <field name="xml_tag"/>
+                                    <field name="is_static"/>
+                                    <field name="field_id"/>
+                                    <field name="ttype"/>
+                                    <field name="field_tree"/>
+                                    <field name="number_of_children"/>
+                                </tree>
+                            </field>
+
                             <field name="child_tag_ids">
                                 <tree>
                                     <field name="xml_tag"/>
                                     <field name="is_static"/>
                                     <field name="field_id"/>
-                                    <!--<field name="ttype"/>
-                                    <field name="relation"/>-->
+                                    <field name="ttype"/>
+                                    <!--<field name="relation"/>-->
                                     <field name="field_tree"/>
                                     <field name="number_of_children"/>
                                 </tree>
