refacotored run api call and test api for some abstraction and made cron to clear logs

--- a/api_connector/api-module/views/api_views.xml
+++ b/api_connector/api-module/views/api_views.xml
@@ -30,6 +30,7 @@
                                             <field name="value" />
                                         </tree>
                                     </field>
+                                    <field name="json_headers" />
                                 </group>
                             </form>
                         </page>
