--- a/custom_edi/views/fields_inherit.xml
+++ b/custom_edi/views/fields_inherit.xml
@@ -9,14 +9,11 @@
             <field name="inherit_id" ref="base.view_model_fields_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='copied']" position="after">
-                    <!--<field name="field_tree"/>-->
-                    <!--<field name="xml_tag"/>-->
                     <field name="name"/>
                 </xpath>
             </field>
         </record>
-        
-        
+
         <!-- When you click "add line" on the main custom mapping page in the fields field
         http://localhost:8069/web#id=45&menu_id=4&cids=1&action=30&model=ir.ui.view&view_type=form -->
 
@@ -26,22 +23,20 @@
             <field name="name">ir.model.fields.tree.inherit</field>
             <field name="model">ir.model.fields</field>
             <field name="inherit_id" ref="base.view_model_fields_tree"/>
-            <!--<field name="inherit_id" ref="base.view_model_fields_search"/>-->
             <field name="arch" type="xml">
 
                 <xpath expr="//field[@name='name']" position="before">
-                    <button name="add"
+                    <button name="create_edi_tag"
                             type="object"
-                            string="Add this field"
+                            string="Add this Field"
                             attrs="{'invisible': [('ttype','in',['many2one','one2many','many2many'])]}"
                             />
-                    <button name="context" type="object" string="Context"/>
                 </xpath>
 
                 <xpath expr="//field[@name='name']" position="after">
-                    <button name="open_form"
+                    <button name="view_subfields"
                             type="object"
-                            string="View subfields..."
+                            string="View Subfields"
                             attrs="{'invisible': [('ttype','not in',['many2one','one2many','many2many'])]}"
                             />
                 </xpath>
@@ -61,8 +56,6 @@
                 </field>
             </field>
         </record>
-
-
 
     </data>
 </odoo>
